# alt_nfp

./: .gitignore  CLAUDE.md  README.md  alt_nfp_estimation_v3.py  mkdocs.yml  pyproject.toml  scratch.ipynb  todo.md  todo_1.md  todo_national_1.md  todo_national_2.md
.cursor/rules/: alt-nfp-knowledge.mdc
.github/workflows/: ci.yml  docs.yml
archive/: bayesian_workflow_reference.md  pp_estimation.py  pp_estimation_v2.py  pp_nowcast_backtest_v3.py  pp_sensitivity_v3.py  provider_spec.md  store_todo.md  tech_debt_spec.md  todo_2.md  todo_3.md  todo_benchmark_2.md  todo_ingest.md  todo_provider.md  todo_pub.md  todo_vintages.md  toml_config_spec.md  vintage_pipeline_spec.md  vintage_store_coverage_integration_test.md
archive/output/: forecast_2026-02-12.docx  forecast_2026-02-12.md  precision_budget.parquet
archive/output/feb_0/: precision_budget.parquet
archive/output/jan_0/: precision_budget.parquet
data/: alt_nfp_births_2.csv  alt_nfp_index_1.csv  alt_nfp_index_2.csv  ces_index.csv  panel_tenure.csv  qcew_index.csv
docs/: Bayesian_Workflow_article.md  bayesian_state_space_alt_nfp_results_v1.docx  bayesian_state_space_alt_nfp_results_v2.docx  bayesian_state_space_alt_nfp_v7.docx  bayesian_state_space_alt_nfp_v9.docx  benchmark_prediction_alt_nfp_v2.docx  forecast_2026-02-12.docx  gen_ref_pages.py  general_methods_alt_nfp_v4.docx  general_methods_alt_nfp_v5.docx  general_methods_alt_nfp_v5.md  general_methods_alt_nfp_v6.docx  general_methods_alt_nfp_v6.md  index.md  large_firm_acquisition.docx  large_firm_acquisition.md  methods.md  methods_evaluation.md  methods_results.docx  methods_results.md  methods_revision_backtest.docx  methods_revision_backtest.md  methods_revision_backtest.qmd  payroll_provider_analysis_alt_nfp_v1.docx  payroll_provider_analysis_alt_nfp_v2.docx  payroll_provider_analysis_alt_nfp_v3.docx  release_1_alt_nfp_v1.md  release_1_methods_alt_nfp_v1.docx  release_1_methods_alt_nfp_v1.md  technical_methods_alt_nfp_v1.docx  technical_methods_alt_nfp_v1.md  vintage_pipeline_spec.md  visualization_bayesian_workflow.md  ~$nchmark_prediction_alt_nfp_v2.docx
docs/architecture/: data-flow.md  index.md  system-design.md
docs/getting-started/: index.md  installation.md  quickstart.md
docs/reference/: index.md
docs/user-guide/: bayesian-workflow.md  configuration.md  data-sources.md  index.md  model-overview.md  running-pipeline.md  vintage-management.md
output/: benchmark_backtest_2025.parquet  benchmark_backtest_checkpoint.parquet  benchmark_backtest_results.parquet  precision_budget.parquet
output/evaluate_2a_benchmark_baseline/: benchmark_backtest_checkpoint.parquet
output/evaluate_2a_benchmark_era/: benchmark_backtest_checkpoint.parquet
output/qcew_revisions/: overall_summary.csv  overall_summary.parquet  summary.csv  summary.parquet
scripts/: add_qcew_to_vintage_store.py  backfill_alfred.py  backfill_qcew.py  backtest_v2_model.py  benchmark_diagnostic.py  build_publication_calendar.py  check_ces_coverage.py  evaluate_2a.py  export_data.py  jan_reforecast.py  qcew_revision_stability.py
scripts/_parts/: part01_preamble.py  part02_config.py  part03_data.py  part04_model.py  part05_sampling_diagnostics.py  part06_ppc_loo.py  part07_plots.py  part08_forecast_main.py
specs/: benchmark_spec.md  censoring.md  gibbs_spec.md  national_model_spec.md  provider_spec.md  releases_spec.md
src/alt_nfp/: __init__.py  backtest.py  benchmark.py  benchmark_backtest.py  benchmark_plots.py  checks.py  config.py  data.py  diagnostics.py  forecast.py  model.py  panel_adapter.py  plots.py  residuals.py  sampling.py  sensitivity.py  settings.py
src/alt_nfp/ingest/: __init__.py  aggregate.py  base.py  ces.py  ces_national.py  ces_state.py  compositing.py  indicators.py  panel.py  payroll.py  qcew.py  releases.py  tagger.py  vintage_store.py
src/alt_nfp/ingest/bls/: __init__.py  _http.py  ces_national.py  qcew.py
src/alt_nfp/ingest/release_dates/: __init__.py  config.py  scraper.py  vintage_dates.py
src/alt_nfp/lookups/: __init__.py  geography.py  industry.py  publication_dates.py  revision_schedules.py  update_schedule.py
src/alt_nfp/vintages/: __init__.py  __main__.py  build_store.py  evaluation.py
src/alt_nfp/vintages/download/: __init__.py  ces.py  qcew.py
src/alt_nfp/vintages/processing/: __init__.py  ces_national.py  combine.py  qcew.py  sae_states.py
tests/: test_backtesting_smoke.py  test_benchmark.py  test_benchmark_backtest.py  test_benchmark_revisions.py  test_client.py  test_compositing.py  test_cyclical_indicators.py  test_fred.py  test_ingest.py  test_lookups.py  test_model.py  test_new_ingest.py  test_panel_adapter.py  test_precision_budget.py  test_provider_config.py  test_publication_calendar.py  test_publication_dates.py  test_release_dates.py  test_revision_schedules.py  test_sensitivity_smoke.py  test_settings.py  test_store_coverage.py  test_vintage_store.py  test_vintages.py
tests/ingest/bls/: test_downloads.py  test_http.py  test_programs.py
